feat：完善代码库

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -34,11 +34,13 @@
 
 ### 01.整体概述介绍
 #### 1.1 项目背景
-- App经常用到抓包
-    - 网络请求抓包是研发过程中常见问题，无论是开发时的接口调试，有时候逆向抓包其他应用，都。
+- 通讯安全是App安全检测过程中非常重要的一项
+    - 针对该项的主要检测手段就是使用中间人代理机制对网络传输数据进行抓包、拦截和篡改，以检验App在核心链路上是否有安全漏洞。
 - 保证数据安全
     - 通过charles等工具可以对app的网络请求进行抓包，这样这些信息就会被清除的提取出来，会被不法分子进行利用。
-
+- 不想被竞争对手逆向抓包
+    - 不想自身App的数据被别人轻而易举地抓包获取到，从而进行类似业务或数据分析、爬虫或网络攻击等破坏性行为。
+    - 这样就要求我们必须对数据传输做好安全保护措施和完整性校验，以防止自身数据在网络传输中裸奔，甚至是被三方恶意利用或攻击。
 
 
 #### 1.2 思考问题
