feat：完善代码库

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -8,8 +8,10 @@
     - 2.0 Https三要素
     - 2.1 抓包核心原理
     - 2.2 如何搞定CA证书
-    - 2.3 抓包原理图
-    - 2.4 抓包核心流程
+    - 2.3 如何搞定加解密
+    - 2.4 Charles原理
+    - 2.5 抓包原理图
+    - 2.6 抓包核心流程
 - 03.防止抓包思路
     - 3.1 先看如何抓包
     - 3.2 设置配置文件
@@ -99,13 +101,24 @@
 #### 2.3 如何搞定加解密
 
 
-#### 2.4 抓包原理图
+#### 2.4 Charles原理
+- Charles类似代理服务器
+    - Charles 通过将软件本身设置成系统的网络访问代理服务器，使得所有的网络请求都会走一遍 Charles 代理，从而 Charles 可以截取经过它的请求，然后我们就可以对其进行网络包的分析。
+- 截取设备网络封包数据
+    - Charles对应设置：将代理功能打开，并设置一个固定的端口。默认情况下，端口号为：8888 。
+    - 移动设备设置：在手机上设置 WIFI 的 HTTP 代理。注意这里的前提是，Phone 和 Charles 代理设备链接的是同一网络(同一个ip地址和端口号)。
+- 截取Https的网络封包
+    - 正常情况下，Charles 是不能截取Https的网络包的，这涉及到 Https 的证书问题。
+
+
+
+#### 2.5 抓包原理图
 - Charles抓包原理图
     - ![image](https://img-blog.csdnimg.cn/20200921192339473.png)
 
 
 
-#### 2.4 抓包核心流程
+#### 2.6 抓包核心流程
 - 抓包核心流程关键节点
     - 第一步，客户端向服务器发起HTTPS请求，charles截获客户端发送给服务器的HTTPS请求，charles伪装成客户端向服务器发送请求进行握手 。
     - 第二步，服务器发回相应，charles获取到服务器的CA证书，用根证书（这里的根证书是CA认证中心给自己颁发的证书）公钥进行解密，验证服务器数据签名，获取到服务器CA证书公钥。然后charles伪造自己的CA证书（这里的CA证书，也是根证书，只不过是charles伪造的根证书），冒充服务器证书传递给客户端浏览器。
@@ -117,6 +130,8 @@
 - 在之后的正常加密通信过程中，charles如何在服务器与客户端之间充当第三者呢？
     - 服务器—>客户端：charles接收到服务器发送的密文，用对称密钥解开，获得服务器发送的明文。再次加密， 发送给客户端。
     - 客户端—>服务端：客户端用对称密钥加密，被charles截获后，解密获得明文。再次加密，发送给服务器端。由于charles一直拥有通信用对称密钥enc_key，所以在整个HTTPS通信过程中信息对其透明。
+
+
 
 
 
@@ -190,6 +205,8 @@
 
 
 
+### 参考博客
+- https://zhuanlan.zhihu.com/p/465441201
 
 
 
