--- a/Read/ReadMeWiki/09.问题思考/05.网络相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/05.网络相关问题汇总.md
@@ -1,8 +1,25 @@
 # 网络相关问题汇总
 #### 目录介绍
-- 01.Http和Https问题
-- 02.网络TCP和UDP问题
-- 03.网络其他问题汇总
+- 01.网络基础问题
+- 02.IP地址问题
+- 03.网络请求流程
+
+
+
+
+
+### 01.网络基础问题
+- 在浏览器中输入了一个链接，为什么会打开网页，然后看到图片，文字，这些东西是哪里来的？经历那些过程？
+- 在浏览器中输入非http类型链接，为何有的可以打开，有的打不开，对链接有何要求？
+- 为什么打开购物网站后，本来是打开我的收藏，但是去重定向到了首页登陆页面？
+
+
+### 02.IP地址问题
+- 域名是如何解析成ip地址？IP地址是唯一不变的？HttpDns的具体原理是什么？
+
+
+### 03.网络请求流程
+
 
 
 ### 01.Http和Https问题
