--- a/Read/ReadShareWiki/07.底层思维/07.独立思考的提升.md
+++ b/Read/ReadShareWiki/07.底层思维/07.独立思考的提升.md
@@ -5,7 +5,7 @@
 - 04.讨论学习的策略
 - 05.锻炼复盘的能力
 - 06.思考能力六阶段
-
+- 07.思考而非去吸纳
 
 
 ### 01.如何去思考能力
@@ -85,7 +85,13 @@
 
 
 
-
+### 07.思考而非去吸纳
+- 对待某些问题，需要去独立的思考，而并不是在完全套用别人的答案。虽然，有时候得出的结论或者结果偏离了需要的答案，但是在这个探索的过程中，我们可以学会怎么去思考。
+- 阻碍思考深度最大的坏习惯是：自己有答案的问题，很少问别人；自己没答案的问题，很少问自己。
+- 比如之前我去参加某个技术论坛活动，有同学就问那些专家，上来就问特别大的问题。比如，“怎么做平台和提升技术？”
+- 结果那个专家就问：具体是什么产品形态，什么用户场景或者什么样的需求功能，遇到啥问题被卡主呢？对方支吾半天也说不太清楚，显然自己也没想过到底要问什么。
+- 吸收别人经验本身并不错，但如果偏信一隅而不是广开言路，或因为有了别人的经验自己便不再思考，就很糟糕。阻碍思考深度最大的习惯是：自己有答案的问题，很少问别人；自己没答案的问题，很少问自己。大部分人在求助的时候倾向于找那些可操作性的经验，也就是所谓的干货，拿来不用动脑对着做就好。
+- 类似开头的这种情况，最好自己能先琢磨琢磨，然后再向外求助。如今网络发达，搜索引擎让我们离别人的答案越来越近，却离自己的答案越来越远。
 
 
 
