feat：完善代码库

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -12,12 +12,12 @@
     - 2.4 Charles原理
     - 2.5 抓包原理图
     - 2.6 抓包核心流程
+    - 2.7 CA校验原理
 - 03.防止抓包思路
     - 3.1 先看如何抓包
     - 3.2 设置配置文件
-    - 3.3 关闭代理
-    - 3.4 数据加密处理
-    - 3.5 黑科技抓包
+    - 3.3 数据加密处理
+    - 3.4 黑科技抓包
 - 04.防抓包实践开发
     - 4.1 App安全配置
     - 4.2 关闭代理
@@ -72,11 +72,15 @@
 ### 02.抓包的原理分析
 #### 2.0 Https三要素
 - 要清楚HTTPS抓包的原理，首先需要先说清楚 HTTPS 实现数据安全传输的工作原理，主要分为三要素和三阶段。
-- 三要素分别是：
+- Http传输数据目前存在的问题
+    - 通信使用明文，内容可能被窃听；
+    - 不验证通信方的身份，因此可能遭遇伪装；
+    - 无法证明报文的完整性，所以有可能遭到篡改。
+- Https三要素分别是：
     - 1.加密：通过对称加密算法实现。
     - 2.认证：通过数字签名实现。（因为私钥只有 “合法的发送方” 持有，其他人伪造的数字签名无法通过验证）
     - 3.报文完整性：通过数字签名实现。（因为数字签名中使用了消息摘要，其他人篡改的消息无法通过验证）
-- 三阶段分别是：
+- Https三阶段分别是：
     - 1.CA 证书校验：CA 证书校验发生在 TLS 的前两次握手，客户端和服务端通过报文获得服务端 CA 证书，客户端验证 CA 证书合法性，从而确认 CA 证书中的公钥合法性（大多数场景不会做双向认证，即服务端不会认证客户端合法性，这里先不考虑）。
     - 2.密钥协商：密钥协商发生在 TLS 的后两次握手，客户端和服务端分别基于公钥和私钥进行非对称加密通信，协商获得 Master Secret 对称加密私钥（不同算法的协商过程细节略有不同）。
     - 3.数据传输：数据传输发生在 TLS 握手之后，客户端和服务端基于协商的对称密钥进行对称加密通信。
@@ -133,6 +137,8 @@
 
 
 
+#### 2.7 CA校验原理
+
 
 
 ### 03.防止抓包思路
@@ -145,8 +151,6 @@
 
 #### 3.2 设置配置文件
 
-
-#### 3.3 关闭代理
 
 
 
