--- a/Read/ReadMeWiki/09.问题思考/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题思考/06.数据结构问题汇总.md
@@ -1,6 +1,9 @@
 # 数据结构问题汇总
 #### 目录介绍
 - 01.数组相关问题
+- 02.链表相关问题
+
+
 
 
 
@@ -8,9 +11,24 @@
 - 数组设计相关问题
     - 数组具有什么样的特性？说一下数组初始化操作？如何理解空间连续？数组使用场景有哪些？
     - 数组有什么样的缺点？数组创建为何需要注意初始化长度？数组如何根据下标访问数据？下标内存地址值如何计算？
-    - 数组查找的时间复杂度是多少？为什么说数组插入是低效的？
+    - 数组查找的时间复杂度是多少？为什么说数组插入是低效的？那么如何提高数据的插入效率呢？
 - 数组算法相关问题
-    - 
+    - 算法1：用类封装数组，要求可以添加数据，在指定索引添加数据，删除数据，查询数据，遍历数据等操作
+    - 算法2：给定一个排序数组[0,0,1,1,1,2,2,3,3,4]，需要在原地删除重复出现的元素，使得每个元素只出现一次，返回移除后数组的新长度。
+    - 算法3：啤酒每罐2.3元，饮料每罐1.9元。小明买了若干啤酒和饮料，一共花了82.3元。请你计算他买了几罐啤酒。
+    - 算法4：给定一个非空整数数组[4,1,2,1,2]，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
+
+
+### 02.链表相关问题
+- 链表设计相关问题
+    - 链表应用场景有那些？链表存储数据和数组存储数据有什么区别？存储相同的数据占用空间比较？
+- 链表算法相关问题
+
+
+
+
+
+
 
 
 
