--- a/Read/ReadShareWiki/01.出发启程/05.经营好自我公司.md
+++ b/Read/ReadShareWiki/01.出发启程/05.经营好自我公司.md
@@ -1,4 +1,5 @@
 #### 目录介绍
+- 00.先看一个小案例
 - 01.对待工作的态度
 - 02.我在为谁而工作
 - 03.要有自己的价值
@@ -8,6 +9,11 @@
 - 07.为自己未来打工
 
 
+
+### 00.先看一个小案例
+- 一位实习生开始接手客服工作，她几乎回复了用户发来的每一个问题，不明白的就和产品研发沟通，尽可能给用户满意的答复，在没有要求的节假日也会处理客服问题。
+- 在这个期间她对公司的产品有了详尽的了解，不仅如此，她还和运营的同学一起组织了客服标准话术，分门别类整理反馈问题给研发和产品做参考，和运营团队一起构建客服规范等等，对业务的发展起到了非常重要的作用。
+- 什么是牛人，就是交给他/她一件事，做成了，还做得挺好，而且还触类旁通。这个客服相比一般的人，多了一份对待工作的热情，还主动性地掌握更多，这就是经营好自我公司的一种体现。
 
 
 ### 01.对待工作的态度
@@ -52,11 +58,10 @@
 - 牛逼的公司的确能给你一个光环，但不代表你就牛逼。**一定要在一家公司好好沉淀个三四年，切莫荒废了自己**。用人单位最看重的是什么？他们更看重你在以前公司积累的内在的东西，不是你平时做什么，而是你做出了什么成绩、你有什么资源、你在这个公司的成长轨迹、因为有你给这个公司带来了什么。
 
 
+
 #### 6.2 离开后剩下什么
 - **离开了这个公司，你还剩下什么**？很多人很可悲。现在这个社会太浮躁，太多人抱怨自己的公司如何如何，抱怨自己的领导如何如何。抱怨是徒劳的，他们经常不会因为你的抱怨而改变，至少本质不会变。关于这个问题，给6个字：要么忍，要么滚。
 - 这个世界上没有完美的人，公司也如是。你要明白自己在这个公司，真正需要的是什么？如果值得挖，请深挖。如果爱，请深爱。领导也一样，他们能成为你的领导，就一定有比你强的地方，他好的地方，你跟着好好学就是了。觉得不OK，那就另谋出路。
-
-
 
 
 ### 07.为自己未来打工
