--- a/Read/ReadShareWiki/02.计划管理/01.为何要做好计划.md
+++ b/Read/ReadShareWiki/02.计划管理/01.为何要做好计划.md
@@ -15,7 +15,8 @@
 ### 01.做好计划的背景
 #### 1.1 没有计划的状态
 - 没有工作计划的工作状态是这样的：总是心情不好，总是有什么事情萦绕在心头，没办法全身心的投入工作；虽然有计划了，但是习惯性拖延，总是无法迅速开始工作。
-- 由于没有计划，早晨到了公司才想这一天该做点啥，想好之后却不能专心做，做着这件事情突然又觉得那件事情也很紧急，于是就扔下这个去做那个；早晨到了公司先查查邮件、看看新闻、泡杯茶、与同事聊聊天、商讨一下午饭吃什么，于是乎一系列的琐碎小事填充了整个上午的时间，忙碌一天却还是“无产阶级”。
+- 由于没有计划，早晨到了公司才想这一天该做点啥，想好之后却不能专心做，做着这件事情突然又觉得那件事情也很紧急，于是就扔下这个去做那个。
+- 早晨到了公司先查查邮件、看看新闻、泡杯茶、与同事聊聊天、商讨一下午饭吃什么，于是乎一系列的琐碎小事填充了整个上午的时间，忙碌一天却还是“无产阶级”。
 
 
 #### 1.2 什么是计划
@@ -31,7 +32,8 @@
 
 ### 03.做计划有何意义
 - 先抽象一个简单的模型，比如你想制定一个你自己从明天开始的跑步计划。听到给跑步做计划的第一反应，感觉似乎很简单。认为简单的重要原因是缺乏一个明确、需要努力而又可行的目标。
-- 做计划的好处在于让你的目标和时间都更清晰，如果不做计划，你极有可能在目标和时间都模糊的情况下选择娱乐和消遣。这或许是做计划最需要的前提，也是计划的首要意义，千万别为了做计划而做计划。举我自己的例子：
+- 做计划的好处在于让你的目标和时间都更清晰，如果不做计划，你极有可能在目标和时间都模糊的情况下选择娱乐和消遣。
+- 这或许是做计划最需要的前提，也是计划的首要意义，千万别为了做计划而做计划。举我自己的例子：
 
 
 #### 3.1 第一步计划
@@ -55,7 +57,7 @@
 #### 4.1 小杨汇报项目
 - 小杨是一名刚参加工作的运营数据分析师，最近直属领导给了他一个项目，一个月后要看这个结果，部门大领导到时候需要他去做汇报，小白兴冲冲地拿到了数据源，一番操作：数据清洗、统计汇总、归因分析，把当月的数算了个平均值，大概感觉了一下，然后在周五下班后加了一会儿班，兴冲冲地在工作大群里发给了总监。
 - 总监把小白叫过去，问他，这个结果该怎么看，有对照吗，你得出来这个数据的计算逻辑是什么，有参照吗，这些策略规则的价值点、意义是什么？
-- 总监批评了小白一个小时，小白本以为终于拿到重要项目了，还可以表现一下自己，结果……如果小白按照计划管理的方式去做这个项目，那么结果会完全不一样。
+- 总监批评了小杨一个小时，小杨本以为终于拿到重要项目了，还可以表现一下自己，结果……如果小杨按照计划管理的方式去做这个项目，那么结果会完全不一样。
 
 
 
@@ -67,10 +69,11 @@
 
 
 #### 4.3 做计划后小白的变化
-- 那么小白该怎么做才能不被领导批评呢？最开始拿到需求的时候，不懂不明确的地方多问，尤其是找到需求方，理解他的目标是否合理，目标是什么，业务场景是什么？
-- 其次明确了需求之后，按照以往的经验，比如这个数据策略的项目，先观察现有数据特征，是否需要加入对照组，历史同比/环比的平均水平值是多少，基于历史的基准，然后来做筛选和判断。预估工期多久，及时反馈给领导需要多久可以做完，有什么困难，哪些资源拿不到需要去协调？
+- 那么小杨该怎么做才能不被领导批评呢？最开始拿到需求的时候，不懂不明确的地方多问，尤其是找到需求方，理解他的目标是否合理，目标是什么，业务场景是什么？
+- 其次明确了需求之后，按照以往的经验，比如这个数据策略的项目，先观察现有数据特征，是否需要加入对照组，历史同比/环比的平均水平值是多少，基于历史的基准，然后来做筛选和判断。
+- 预估工期多久，及时反馈给领导需要多久可以做完，有什么困难，哪些资源拿不到需要去协调？
 - 然后得到了数据的汇总统计结果之后，该用什么形式来展示？是通过表格展示还是ppt或者思维导图呈现。
-- 最后基于前面几个步骤，该怎么呈现出结果，这些数字或者结论能怎么反馈出这次的项目效果，可以做出什么策略调整？
+- 最后基于前面几个步骤，该怎么呈现出结果，这些数字或者结论能怎么反馈出这次的项目效果，可以做出什么策略调整？一切都需要做好详细的计划！
 
 
 
@@ -94,11 +97,13 @@
 
 ### 06.效率需要制计划
 #### 6.1 执行中会耗费更多时间
-- 凡是想不清楚的，做起来一定不能得心应手，做计划的过程就是尽量去理解达成目标的路上可能存在的问题的过程，避免事到临头再“病急乱投医”，虽然环境往往是不以人的意志力转移，许多人就以此为借口拒绝做计划，然后呢就是在现实生活中东碰西撞，毫无章法的瞎折腾，美其名曰“试错”。 
+- 凡是想不清楚的，做起来一定不能得心应手，做计划的过程就是尽量去理解达成目标的路上可能存在的问题的过程，避免事到临头再“病急乱投医”。
+- 虽然环境往往是不以人的意志力转移，许多人就以此为借口拒绝做计划，然后呢就是在现实生活中东碰西撞，毫无章法的瞎折腾，美其名曰“试错”。 
 
 
 #### 6.2 没有找到执行重心
-- 没有计划，就没有执行的重心，譬如农夫不把要种的庄稼种上，精心打理，土地荒在那里，杂草一定会丛生。每天关心各种各样的与自己八竿子打不着的事，因为没有计划，就好比没有自己该侍弄的庄稼，到了秋天了，好好侍弄庄稼的人大丰收了，你呢，坐在树桩边等兔子撞上来。
+- 没有计划，就没有执行的重心，譬如农夫不把要种的庄稼种上，精心打理，土地荒在那里，杂草一定会丛生。
+- 每天关心各种各样的与自己八竿子打不着的事，因为没有计划，就好比没有自己该侍弄的庄稼，到了秋天了，好好侍弄庄稼的人大丰收了，你呢，坐在树桩边等兔子撞上来。
 
 
 #### 6.3 确保要事第一
@@ -114,16 +119,18 @@
 
 ### 07.资源也需要计划
 #### 7.1 一切都是有成本的
-- “磨刀不误砍柴工”，计划的过程就是“磨刀”的过程，准备工作不充分只能是更多浪费时间，到了河边看到鱼很多才想起来网没有带不是瞎折腾功夫嘛。计划就是为你要达到的目标积极策划的过程，可能会遇到什么问题，需要做哪些准备？避免事到临头一筹莫展。发现不对再从头再来不是瞎折腾功夫是什么？
+- “磨刀不误砍柴工”，计划的过程就是“磨刀”的过程，准备工作不充分只能是更多浪费时间，到了河边看到鱼很多才想起来网没有带不是瞎折腾功夫嘛。
+- 计划就是为你要达到的目标积极策划的过程，可能会遇到什么问题，需要做哪些准备？避免事到临头一筹莫展。发现不对再从头再来不是瞎折腾功夫是什么？
 
 
 #### 7.2 时间是最大成本
-- 也有人说，我们实力雄厚，不在乎走弯路的，譬如南辕北辙里的那个郑国人，仗着马车好，车夫水平高、盘缠多，就一意孤行。可是这个世界上没有人可以说他时间管够的，即便其他都不算，时间失去了，一切也都失去了！越富有的人越舍不得浪费时间。计划是节约资源，首先是节约时间资源的最重要工具。因此，为重要目标好好做计划是明智之举。
+- 也有人说，我们实力雄厚，不在乎走弯路的，譬如南辕北辙里的那个郑国人，仗着马车好，车夫水平高、盘缠多，就一意孤行。
+- 可是这个世界上没有人可以说他时间管够的，即便其他都不算，时间失去了，一切也都失去了！越富有的人越舍不得浪费时间。计划是节约资源，首先是节约时间资源的最重要工具。因此，为重要目标好好做计划是明智之举。
 
 
 #### 7.3 重复和遗漏免不了
-- 也有人觉得他很聪明，别人问起他计划在哪，他总说在他的脑子里装着呢，还让别人把心放到肚子里瞧好吧。我们相信，一些小打小闹的事，确实并不一定要做计划，譬如到厨房烧个菜、到超市买点啥的，这些日常琐事凭经验就行，做书面计划是“小题大做”，不免有点迂腐。但还是要想想，这个想想就最简易的计划。
-- 重大的事情，千头万绪，太烧脑，要想“不重不漏”，做个书面计划实在必不可少，所谓“好记性不如烂笔头”。
+- 也有人觉得他很聪明，别人问起他计划在哪，他总说在他的脑子里装着呢，还让别人把心放到肚子里瞧好吧。我们相信，一些小打小闹的事，确实并不一定要做计划，譬如到厨房烧个菜、到超市买点啥的，这些日常琐事凭经验就行，做书面计划是“小题大做”，不免有点迂腐。
+- 但还是要想想，这个想想就最简易的计划。重大的事情，千头万绪，太烧脑，要想“不重不漏”，做个书面计划实在必不可少，所谓“好记性不如烂笔头”。
 
 
 ### 08.检查也需要计划
