--- a/Read/ReadShareWiki/02.计划管理/07.计划任务实践题.md
+++ b/Read/ReadShareWiki/02.计划管理/07.计划任务实践题.md
@@ -6,7 +6,8 @@
 
 
 ### 01.计划实践的背景
-- 做计划犹如炒菜，同样的原料，同样的工具，两个人炒出来的味道却大相径庭，只因这是一个手艺活。同样的计划，有的精美绝伦，有的计划草草了事。
+- 做计划犹如炒菜，同样的原料，同样的工具，两个人炒出来的味道却大相径庭，只因这是一个手艺活。
+- 同样的计划，有的精美绝伦，有的计划草草了事。
 
 
 
@@ -21,40 +22,25 @@
 ### 03.按照目标划任务
 - 1）在白纸上，书写月度目标清单，上月没有完成的事项纳入本清单。记得标注序号。
 - 2）评估目标的合理性和科学性。指标包含“价值系数”、“耗时”、“资源”、“截止时刻”。
-
-价值系数分为5个等级，5-非做不可；4-委托他人做；3-可做可不做；2-搁置；1-不做。
-
-耗时按照30分钟为一个时间单位，如果是3小时，意味着要6个时间单位。
-
-每天真正有效的工作时间，你可以控制的不过6个时间单位，其余时间会被系列的杂事、开会、电话等内容打断。
-
-做这一步的意义在于量力而行，不要幻想自己是神仙，每个月拥有时间你是有限的，可支配的更少！这是一个残酷的现实。
-
-3）将保留下来的目标按照重要程度进行优先排序，此刻将目标清单升级为2.0版本。（见清单1）
-
-4）拆解目标，把每个目标分解成若干个小任务。每个小任务必须匹配时间、责任人、完成时间。此步骤可以用思维导图绘制。（工具2）
-
-5）将思维导图中的重要事项和关键节点填进“月度行程表”(主要是要会见的人、出差安排、开会、重要项目准备)。固定后，将这些内容输入手机，主要以与他人的约会事项为主。（工具3）
-
-6）生成代办事情总清单。随时对照检查和紧盯，完成一项就勾选一项。（范例4）
-
-7）生成交流清单、检查清单两类，每个被委托的人一张交流清单，每件关键任务一张检查清单。注意清单格式。（范例5）
-
-8）平时会发现一些遗漏部分，及时增补进入月计划和总清单。
-
-月计划的最终成果就是一张行程表+一系列的备忘清单。
+    - 价值系数分为5个等级，5-非做不可；4-委托他人做；3-可做可不做；2-搁置；1-不做。
+    - 耗时按照30分钟为一个时间单位，如果是3小时，意味着要6个时间单位。
+    - 每天真正有效的工作时间，你可以控制的不过6个时间单位，其余时间会被系列的杂事、开会、电话等内容打断。
+    - 做这一步的意义在于量力而行，不要幻想自己是神仙，每个月拥有时间你是有限的，可支配的更少！这是一个残酷的现实。
+- 3）将保留下来的目标按照重要程度进行优先排序，此刻将目标清单升级为2.0版本。（见清单1）
+- 4）拆解目标，把每个目标分解成若干个小任务。每个小任务必须匹配时间、责任人、完成时间。此步骤可以用思维导图绘制。（工具2）
+- 5）将思维导图中的重要事项和关键节点填进“月度行程表”(主要是要会见的人、出差安排、开会、重要项目准备)。固定后，将这些内容输入手机，主要以与他人的约会事项为主。（工具3）
+- 6）生成代办事情总清单。随时对照检查和紧盯，完成一项就勾选一项。（范例4）
+- 7）生成交流清单、检查清单两类，每个被委托的人一张交流清单，每件关键任务一张检查清单。注意清单格式。（范例5）
+- 8）平时会发现一些遗漏部分，及时增补进入月计划和总清单。
+- 月计划的最终成果就是一张行程表+一系列的备忘清单。
 
 
 ### 04.小巧有用周计划
-1）写待办事项；
-
-2）补充清单；
-
-3）每周有固定的时间整理计划；
-
-4）周计划和日计划在初期可以做合并；
-
-5）学会做每日手账是一件非常快乐事情；这个格式很重要。特别是看到自己的清单上被逐一完成的时候，瞬间你会感受时光的美好！
+- 1）写待办事项；
+- 2）补充清单；
+- 3）每周有固定的时间整理计划；
+- 4）周计划和日计划在初期可以做合并；
+- 5）学会做每日手账是一件非常快乐事情；这个格式很重要。特别是看到自己的清单上被逐一完成的时候，瞬间你会感受时光的美好！
 
 
 
