--- a/Read/ReadShareWiki/01.出发启程/04.要带上技能地图.md
+++ b/Read/ReadShareWiki/01.出发启程/04.要带上技能地图.md
@@ -67,10 +67,10 @@
 
 
 ### 07.系统演化的路径
-如果把我们看作一个不断成长和演化的系统，那么，你会得到一个启示：
-很多时候，其实不是我们自己不断地「往前走」，而是我们的内在系统本身，沿着我们设计的关键节点和路径，自行演化和发展。
-也就是说，对我们来说，更重要的，不是去推动自己「我要做什么」，而是找到自己的关键节点，把它们整合成一条路径，再给予自己足够的内驱力。
-这就需要你具备一个愿景和目标，并且，能够基于对愿景和自身本质的理解，决定每一个关键节点的方向，让系统始终保持一个稳定的方向。
+- 如果把我们看作一个不断成长和演化的系统，那么，你会得到一个启示：
+- 很多时候，其实不是我们自己不断地「往前走」，而是我们的内在系统本身，沿着我们设计的关键节点和路径，自行演化和发展。
+- 也就是说，对我们来说，更重要的，不是去推动自己「我要做什么」，而是找到自己的关键节点，把它们整合成一条路径，再给予自己足够的内驱力。
+- 这就需要你具备一个愿景和目标，并且，能够基于对愿景和自身本质的理解，决定每一个关键节点的方向，让系统始终保持一个稳定的方向。
 
 
 
