feat：完善代码库

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -4,26 +4,27 @@
     - 1.2 思考问题
     - 1.3 设计目标
     - 1.4 收益分析
-- 02.抓包的原理分析
-    - 2.0 Https三要素
-    - 2.1 抓包核心原理
-    - 2.2 如何搞定CA证书
-    - 2.3 如何搞定加解密
-    - 2.4 Charles原理
-    - 2.5 抓包原理图
-    - 2.6 抓包核心流程
-    - 2.7 CA校验原理
+- 02.市面抓包的分析
+    - 2.1 Https三要素
+    - 2.2 抓包核心原理
+    - 2.3 搞定CA证书
+    - 2.4 突破CA证书校验
+    - 2.5 如何搞定加解密
+    - 2.6 Charles原理
+    - 2.7 抓包原理图
+    - 2.8 抓包核心流程
 - 03.防止抓包思路
     - 3.1 先看如何抓包
     - 3.2 设置配置文件
     - 3.3 数据加密处理
-    - 3.4 黑科技抓包
+    - 3.4 避免黑科技抓包
 - 04.防抓包实践开发
     - 4.1 App安全配置
     - 4.2 关闭代理
     - 4.3 证书校验
-    - 4.3 OkHttp配置
-    - 4.4 防止挂载抓包
+    - 4.4 OkHttp配置
+    - 4.5 防止挂载抓包
+    - 4.6 双向认证
 - 05.其他设计说明
     - 5.1 性能设计
     - 5.2 测试用例设计
@@ -31,6 +32,11 @@
     - 5.4 灰度设计
     - 5.5 降级设计
     - 5.6 异常设计
+- 06.防抓包功能自测
+    - 6.1 网络请求测试
+    - 6.2 抓包测试
+    - 6.3 黑科技挂载测试
+    - 6.4 逆向破解测试
 
 
 
@@ -42,40 +48,38 @@
     - 通过charles等工具可以对app的网络请求进行抓包，这样这些信息就会被清除的提取出来，会被不法分子进行利用。
 - 不想被竞争对手逆向抓包
     - 不想自身App的数据被别人轻而易举地抓包获取到，从而进行类似业务或数据分析、爬虫或网络攻击等破坏性行为。
-    - 这样就要求我们必须对数据传输做好安全保护措施和完整性校验，以防止自身数据在网络传输中裸奔，甚至是被三方恶意利用或攻击。
 
 
 #### 1.2 思考问题
 - 开发项目的时候，都需要抓包，很多情况下即使是Https也能正常抓包正常。那么问题来了：
-    - 抓包的原理是？
-    - 任何Https的 app 都能抓的到吗？
-    - 如果不能，哪些情况下可以抓取，哪些情况下抓取不到？
-- Android 7.0及以上为何不能轻易抓取到Https请求的明文数据？
-    - 其实Charles上显示确实抓到了包，但是当看抓包的详细数据时会发现报错 You may need to configure your browser or application to trust the Charles Root Certificate. See SSL Proxying in the Help menu。
-    - Charles说手机端没有信任Charles的根证书，但是我们手机上已经安装了Charles根证书了，为什么会这样？
-    - 原来在Android 7.0(API 24 ) ，有一个名为“Network Security Configuration”的新安全功能。这个新功能的目标是允许开发人员在不修改应用程序代码的情况下自定义他们的网络安全设置。
-    - 如果应用程序运行的系统版本高于或等于24，并且targetSdkVersion>=24，则只有系统(system)证书才会被信任。用户(user)导入的Charles根证书是不被信任的。
-- Android 7.0 (api 24 ) 和 targetSdkVersion 对抓包的影响
-    - 1.抓自己开发的app的网络包；2.抓第三方app的网络包，比如微博客户端
-    - 这两种情况有什么区别的，第一种app是我们自己开发的，我们手里有源码，能够修改，能够做到像官方文档里面说的一样进行配置。第二种我们没有源码，要想做到像官方文档里面配置的话，只能反编译后，把配置文件添加进去然后重新打包，但是重新打包就会遇到很多坑，并不一定能成功，所以需要使用其他方式达到抓包目的。
-    - 引用官方文档一句话：默认情况下，来自所有应用的安全连接（使用 TLS 和 HTTPS 之类的协议）均信任预装的系统 CA，而面向 Android 6.0（API 级别 23）及更低版本的应用默认情况下还会信任用户添加的 CA 存储。应用可以使用 base-config（应用范围的自定义）或 domain-config（按域自定义）自定义自己的连接。
+    - 抓包的原理是？任何Https的 app 都能抓的到吗？如果不能，哪些情况下可以抓取，哪些情况下抓取不到？
+- 什么叫做中间人攻击？
+    - 使用HTTPS协议进行通信时，客户端需要对服务器身份进行完整性校验，以确认服务器是真实合法的目标服务器。
+    - 如果没有校验，客户端可能与仿冒的服务器建立通信链接，即“中间人攻击”。
 
 
 
 #### 1.3 设计目标
+- 防止App被各种方式抓包
+    - 做好各种防抓包安全措施，避免各种黑科技抓包。
+- 沉淀为技术库复用
+    - 目前只是针对App端有需要做防抓包措施，后期其他业务线可能也有这个需要。因此下沉为工具库，傻瓜式调用很有必要。
+
 
 
 #### 1.4 收益分析
+- 抓包库收益
+    - 提高产品App的数据安全，必须对数据传输做好安全保护措施和完整性校验，以防止自身数据在网络传输中裸奔，甚至是被三方恶意利用或攻击。
+- 技能的收益
+    - 下沉为功能基础库，可以方便各个产品线使用，提高开发的效率。避免跟业务解耦合。傻瓜式调用，低成本接入！
 
 
 
-### 02.抓包的原理分析
-#### 2.0 Https三要素
+### 02.市面抓包的分析
+#### 2.1 Https三要素
 - 要清楚HTTPS抓包的原理，首先需要先说清楚 HTTPS 实现数据安全传输的工作原理，主要分为三要素和三阶段。
 - Http传输数据目前存在的问题
-    - 通信使用明文，内容可能被窃听；
-    - 不验证通信方的身份，因此可能遭遇伪装；
-    - 无法证明报文的完整性，所以有可能遭到篡改。
+    - 1.通信使用明文，内容可能被窃听；2.不验证通信方的身份，因此可能遭遇伪装；3.无法证明报文的完整性，所以有可能遭到篡改。
 - Https三要素分别是：
     - 1.加密：通过对称加密算法实现。
     - 2.认证：通过数字签名实现。（因为私钥只有 “合法的发送方” 持有，其他人伪造的数字签名无法通过验证）
@@ -87,25 +91,49 @@
 
 
 
-#### 2.1 抓包核心原理
+#### 2.2 抓包核心原理
 - HTTPS抓包原理
     - Fiddler、Charles等抓包工具，其实都是采用了中间人攻击的方案： 将客户端的网络流量代理到MITM(中间人)主机，再通过一系列的面板或工具将网络请求结构化地呈现出来。
 - 抓包Https有两个突破点
     - CA证书校验是否合法；数据传递过程中的加密和解密。如果是要抓包，则需要突破这两点的技术，无非就是MITM(中间人)伪造证书和使用自己的加解密方式。
+- 抓包的工作流程如下
+    - 中间人截获客户端向发起的HTTPS请求，佯装客户端，向真实的服务器发起请求；
+    - 中间人截获真实服务器的返回，佯装真实服务器，向客户端发送数据；
+    - 中间人获取了用来加密服务器公钥的非对称秘钥和用来加密数据的对称秘钥，处理数据加解密。
 
 
-#### 2.2 如何搞定CA证书
+#### 2.3 搞定CA证书
 - Https抓包核心CA证书
     - HTTPS抓包的原理还是挺简单的，简单来说，就是Charles作为“中间人代理”，拿到了服务器证书公钥和HTTPS连接的对称密钥。
     - 前提是客户端选择信任并安装Charles的CA证书，否则客户端就会“报警”并中止连接。这样看来，HTTPS还是很安全的。
-- CA证书伪造操作说明
+- 安装CA证书到手机中必须洗白
+    - 抓包应用内置的 CA 证书要洗白，必须安装到系统中。而 Android 系统将 CA 证书又分为两种：用户 CA 证书和系统 CA 证书(必要Root权限)。
+- Android从7.0开始限制CA证书
+    - 只有系统(system)证书才会被信任。用户(user)导入的Charles根证书是不被信任的。相当于可以理解Android系统增加了安全校验！
+- 如何绕过CA证书这种限制呢？已知有以下四种方式
+    - 第一种方式：AndroidManifest 中配置 networkSecurityConfig，App 信任用户 CA 证书，让系统对用户 CA 证书的校验给予通过。
+    - 第二种方式：调低 targetSdkVersion < 24，不过这种方式谷歌市场有限制，意味着抓 HTTPS 的包越来越难操作。
+    - 第三种方式：挂载App抓包，VirtualApp 这种多开应用可以作为宿主系统来运行其它应用，利用xposed避开CA证书校验。
+    - 第四种方式：Root手机，把 CA 证书安装到系统 CA 证书目录中，那这个假 CA 证书就是真正洗白了，难度较大。
 
 
 
-#### 2.3 如何搞定加解密
+#### 2.4 突破CA证书校验
+- App版本如何让证书校验安全
+    - 1.设置targetSdkVersion大于24，去掉清单文件中networkSecurityConfig文件中的system和user配置，设置不信任用户证书。
+    - 2.公钥证书固定。指 Client 端内置 Server 端真正的公钥证书。在 HTTPS 请求时，Server 端发给客户端的公钥证书必须与 Client 端内置的公钥证书一致，请求才会成功。
+        - 证书固定的一般做法是，将公钥证书（.crt 或者 .cer 等格式）内置到 App 中，然后创建 TrustManager 时将公钥证书加进去。
+- 那么如何突破CA证书校验
+    - 第一种：JustTrustMe 破解证书固定。Xposed 和 Magisk 都有相应的模块，用来破解证书固定，实现正常抓包。破解的原理大致是，Hook 创建 SSLContext 等涉及 TrustManager 相关的方法，将固定的证书移除。
+    - 第二种：基于 VirtualApp 的 Hook 机制破解证书固定。在 VirtualApp 中加入 Hook 代码，然后利用 VirtualApp 打开目标应用进行抓包。具体看:[VirtualHook](https://github.com/PAGalaxyLab/VirtualHook)
 
 
-#### 2.4 Charles原理
+
+#### 2.5 如何搞定加解密
+- 待完善
+
+
+#### 2.6 Charles原理
 - Charles类似代理服务器
     - Charles 通过将软件本身设置成系统的网络访问代理服务器，使得所有的网络请求都会走一遍 Charles 代理，从而 Charles 可以截取经过它的请求，然后我们就可以对其进行网络包的分析。
 - 截取设备网络封包数据
@@ -116,13 +144,15 @@
 
 
 
-#### 2.5 抓包原理图
+#### 2.7 抓包原理图
 - Charles抓包原理图
     - ![image](https://img-blog.csdnimg.cn/20200921192339473.png)
+- Android上的网络抓包原来是这样工作的
+    - [Charles抓包](https://mp.weixin.qq.com/s/kqMUbHl59V75w8xBxHbXkA)
 
 
 
-#### 2.6 抓包核心流程
+#### 2.8 抓包核心流程
 - 抓包核心流程关键节点
     - 第一步，客户端向服务器发起HTTPS请求，charles截获客户端发送给服务器的HTTPS请求，charles伪装成客户端向服务器发送请求进行握手 。
     - 第二步，服务器发回相应，charles获取到服务器的CA证书，用根证书（这里的根证书是CA认证中心给自己颁发的证书）公钥进行解密，验证服务器数据签名，获取到服务器CA证书公钥。然后charles伪造自己的CA证书（这里的CA证书，也是根证书，只不过是charles伪造的根证书），冒充服务器证书传递给客户端浏览器。
@@ -137,33 +167,43 @@
 
 
 
-#### 2.7 CA校验原理
-
-
-
 ### 03.防止抓包思路
 #### 3.1 先看如何抓包
 - 使用Charles需要做哪些操作
     - **1.电脑上需要安装证书**。这个主要是让Charles充当中间人，颁布自己的CA证书。
     - **2.手机上需要安装证书**。这个是访问Charles获取手机证书，然后安装即可。
     - **3.Android项目代码设置兼容**。Google 推出更加严格的安全机制，应用默认不信任用户证书（手机里自己安装证书），自己的app可以通过配置解决，相当于信任证书的一种操作！
+- 尤其可知抓包的突破口集中以下几点
+    - 第一点：必须链接代理，且跟Charles要具有相同ip。**思路：客户端是否可以判断网络是否被代理了**。
+    - 第二点：CA证书，这一块避免使用黑科技hook证书校验代码，或者拥有修改CA证书权限。**思路：集中在可以判断是否挂载**。
+    - 第三点：冒充中间人CA证书，在客户端client和服务端server之间篡改拦截数据。**思路：可以做CA证书校验**。
+    - 第四点：为了可以在7.0上抓包，App往往配置清单文件networkSecurityConfig。**思路：线上环境去掉该配置**。
+
 
 
 #### 3.2 设置配置文件
-
+- 一个是CA证书配置文件
+    - debug包为了能够抓包，需要配置networkSecurityConfig清单文件的system和user权限，只有这样才会信任用户证书。
+- 一个是检验证书配置
+    - 
+- 一个是检验域名合法性
+    - Android允许开发者重定义证书验证方法，使用HostnameVerifier类检查证书中的主机名与使用该证书的服务器的主机名是否一致。
+    - 如果重写的HostnameVerifier不对服务器的主机名进行验证，即验证失败时也继续与服务器建立通信链接，存在发生“中间人攻击”的风险。
 
 
 
 #### 3.4 数据加密处理
-- 如何做数据加密
-    - RC4加密和解密数据
+- 网络数据加密的需求
+    - 为了项目数据安全性，对请求体和响应体加密，那肯定要知道请求体或响应体在哪里，然后才能加密，其实都一样不论是加密url里面的query内容还是加密body体里面的都一样。
+- 对数据哪里进行加密和解密
+    - 目前对数据返回的data进行加解密。那么如何做数据加密呢？目前项目中采用RC4加密和解密数据。
 - 抓取到的内容为乱码
     - 有的APP为了防止抓取，在返回的内容上做了层加密，所以从Charles上看到的内容是乱码。这种情况下也只能反编译APP，研究其加密解密算法进行解密。难度极大！
 
 
-#### 3.5 黑科技抓包
-- 黑科技如何抓包
-    - 虽然7.0之后常规手段不能抓https的包，但是可以通过黑科技跳过证书验证流程。例如，通过xposed，安装JustTrustMe模块，可以操作https证书检测直接跳过。
+
+#### 3.4 避免黑科技抓包
+- 
 
 
 
@@ -196,6 +236,8 @@
 
 
 #### 4.3 证书校验
+- 下载服务器端公钥证书
+    - 为了防止上面方案可能导致的“中间人攻击”，可以下载服务器端公钥证书，然后将公钥证书编译到Android应用中一般在assets文件夹保存，由应用在交互过程中去验证证书的合法性。
 
 
 
@@ -207,6 +249,33 @@
 
 #### 4.4 防止挂载抓包
 
+
+#### 4.6 双向认证
+- 什么叫做双向认证
+    - SSL/TLS 协议提供了双向认证的功能，即除了 Client 需要校验 Server 的真实性，Server 也需要校验 Client 的真实性。
+- 双向认证的原理
+    - 双向认证需要 Server 支持，Client 必须内置一套公钥证书 + 私钥。在 SSL/TLS 握手过程中，Server 端会向 Client 端请求证书，Client 端必须将内置的公钥证书发给 Server，Server 验证公钥证书的真实性。
+    - 用于双向认证的公钥证书和私钥代表了 Client 端身份，所以其是隐秘的，一般都是用 .p12 或者 .bks 文件 + 密钥进行存放。
+
+
+
+### 06.防抓包功能自测
+#### 6.1 网络请求测试
+- 正常请求，测试网络功能是否正常
+  
+
+
+#### 6.2 抓包测试
+- 配置fiddler等工具
+- 手机上设置代理
+- 手机上安装证书
+- 进行网络请求，会提示SSLHandshakeException即ssl握手失败的错误提示，即表示app端的单向认证成功
+
+
+#### 6.3 黑科技挂载测试
+
+
+#### 6.4 逆向破解测试
 
 
 ### 参考博客
