feat：完善防抓包库

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -22,16 +22,15 @@
     - 4.1 App安全配置
     - 4.2 关闭代理
     - 4.3 证书校验
-    - 4.4 OkHttp配置
+    - 4.4 双向认证
     - 4.5 防止挂载抓包
-    - 4.6 双向认证
-- 05.其他设计说明
-    - 5.1 性能设计
-    - 5.2 测试用例设计
+    - 4.6 数据加解密
+- 05.架构设计说明
+    - 5.1 整体架构设计
+    - 5.2 关键流程图
     - 5.3 稳定性设计
-    - 5.4 灰度设计
-    - 5.5 降级设计
-    - 5.6 异常设计
+    - 5.4 降级设计
+    - 5.5 异常设计说明
 - 06.防抓包功能自测
     - 6.1 网络请求测试
     - 6.2 抓包测试
@@ -185,7 +184,7 @@
 - 一个是CA证书配置文件
     - debug包为了能够抓包，需要配置networkSecurityConfig清单文件的system和user权限，只有这样才会信任用户证书。
 - 一个是检验证书配置
-    - 
+    - 不论是权威机构颁发的证书还是自签名的，打包一份到 app 内部，比如存放在 asset 里。然后用这个KeyStore去引导生成的TrustManager来提供证书验证。
 - 一个是检验域名合法性
     - Android允许开发者重定义证书验证方法，使用HostnameVerifier类检查证书中的主机名与使用该证书的服务器的主机名是否一致。
     - 如果重写的HostnameVerifier不对服务器的主机名进行验证，即验证失败时也继续与服务器建立通信链接，存在发生“中间人攻击”的风险。
@@ -203,9 +202,10 @@
 
 
 #### 3.4 避免黑科技抓包
-- 
-
-
+- 基于Xposed(或者)黑科技破解证书校验
+    - 这种方式可以检查是否有Xposed环境，大概的思路是使用ClassLoader去加载固定包名的xp类，或者手动抛出异常然后捕获去判断是否包含Xposed环境。
+- 基于VirtualApp挂载App突破证书访问权限
+    - 这个VirtualApp相当于是一个宿主App(可以把它想像成桌面级App)，它突破证书校验。然后再实现挂载App的抓包。判断是否是双开环境！
 
 
 ### 04.防抓包实践开发
@@ -238,24 +238,53 @@
 #### 4.3 证书校验
 - 下载服务器端公钥证书
     - 为了防止上面方案可能导致的“中间人攻击”，可以下载服务器端公钥证书，然后将公钥证书编译到Android应用中一般在assets文件夹保存，由应用在交互过程中去验证证书的合法性。
+- 如何设置证书校验
+    - 通过OkHttp的API方法 sslSocketFactory(sslSocketFactory,trustManager) 设置SSL证书校验。
+- 如何设置域名合法性校验
+    - 通过OkHttp的API方法 hostnameVerifier(hostnameVerifier) 设置域名合法性校验。
+- 证书校验的原理分析
+    - 待完善
 
 
 
-
-#### 4.3 OkHttp配置
-
-
-
-
-#### 4.4 防止挂载抓包
-
-
-#### 4.6 双向认证
+#### 4.4 双向认证
 - 什么叫做双向认证
     - SSL/TLS 协议提供了双向认证的功能，即除了 Client 需要校验 Server 的真实性，Server 也需要校验 Client 的真实性。
 - 双向认证的原理
     - 双向认证需要 Server 支持，Client 必须内置一套公钥证书 + 私钥。在 SSL/TLS 握手过程中，Server 端会向 Client 端请求证书，Client 端必须将内置的公钥证书发给 Server，Server 验证公钥证书的真实性。
     - 用于双向认证的公钥证书和私钥代表了 Client 端身份，所以其是隐秘的，一般都是用 .p12 或者 .bks 文件 + 密钥进行存放。
+- 代码层面如何做双向认证
+    - 待完善
+
+
+
+#### 4.5 防止挂载抓包
+- 如何判断是否具有Xposed环境
+    - 待完善
+- 如何判断是否是双开环境
+    - 待完善
+- 如何判断被VA宿主所挂载
+    - 待完善
+
+
+#### 4.5 数据加解密
+
+
+
+### 05.架构设计说明
+#### 5.1 整体架构设计
+
+
+#### 5.2 关键流程图
+
+
+#### 5.3 稳定性设计
+
+
+#### 5.4 降级设计
+
+
+#### 5.5 异常设计说明
 
 
 
