feat：防抓包功能完善

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -25,6 +25,7 @@
     - 4.4 双向认证
     - 4.5 防止挂载抓包
     - 4.6 数据加解密
+    - 4.7 证书锁定
 - 05.架构设计说明
     - 5.1 整体架构设计
     - 5.2 关键流程图
@@ -63,7 +64,11 @@
     - 做好各种防抓包安全措施，避免各种黑科技抓包。
 - 沉淀为技术库复用
     - 目前只是针对App端有需要做防抓包措施，后期其他业务线可能也有这个需要。因此下沉为工具库，傻瓜式调用很有必要。
-
+- 该库终极设计目标如下所示
+    - 第一点：必须是低入侵性，对原有代码改动少，最简单的加入是一行代码设置即可。完全解耦合。
+    - 第二点：可以动态灵活配置，支持配置禁止代理，支持配置是否证书校验，支持配置域名合法性过滤，支持拦截器加解密数据。
+    - 第三点：可以检测App是否在双开，挂载，Xposed攻击环境
+    - 第四点：可以灵活设置加解密的key，可以灵活替换加解密方式，比如目前采用RC4，另一个项目想用DES，可以灵活更换。
 
 
 #### 1.4 收益分析
@@ -129,7 +134,10 @@
 
 
 #### 2.5 如何搞定加解密
-- 待完善
+- 目前使用对称加密和解密请求和响应数据
+    - 加密和解密都是用相同密钥。只有一把密钥，如果密钥暴露，内容就会暴露。但是这一块逆向破解有些难度。而破解解密方式就是用密钥逆向解密，或者中间人冒充使用自己的加解密方式！
+- 加密后数据镇兼顾了安全性吗
+    - 不一定安全。中间人伪造自己的公钥和私钥，然后拦截信息，进行篡改。
 
 
 #### 2.6 Charles原理
@@ -188,10 +196,11 @@
 - 一个是检验域名合法性
     - Android允许开发者重定义证书验证方法，使用HostnameVerifier类检查证书中的主机名与使用该证书的服务器的主机名是否一致。
     - 如果重写的HostnameVerifier不对服务器的主机名进行验证，即验证失败时也继续与服务器建立通信链接，存在发生“中间人攻击”的风险。
+- 如何查看CA证书的数据
+    - [证书验证网站](https://www.myssl.cn/tools/downloadchain.html) ；[SSL配置检查网站](https://www.geocerts.com/ssl-checker)
 
 
-
-#### 3.4 数据加密处理
+#### 3.3 数据加密处理
 - 网络数据加密的需求
     - 为了项目数据安全性，对请求体和响应体加密，那肯定要知道请求体或响应体在哪里，然后才能加密，其实都一样不论是加密url里面的query内容还是加密body体里面的都一样。
 - 对数据哪里进行加密和解密
@@ -208,16 +217,22 @@
     - 这个VirtualApp相当于是一个宿主App(可以把它想像成桌面级App)，它突破证书校验。然后再实现挂载App的抓包。判断是否是双开环境！
 
 
+
 ### 04.防抓包实践开发
 #### 4.1 App安全配置
 - 添加配置文件
     - android:networkSecurityConfig="@xml/network_security_config"
-- 在官方文档找到了答案：
-    - 网络安全性配置特性让应用可以在一个安全的声明性配置文件中自定义其网络安全设置，而无需修改应用代码。可以针对特定域和特定应用配置这些设置。此特性的主要功能如下所示：
-    - 自定义信任锚：针对应用的安全连接自定义哪些证书颁发机构 (CA) 值得信任。例如，信任特定的自签署证书或限制应用信任的公共 CA 集。
-    - 仅调试重写：在应用中以安全方式调试安全连接，而不会增加已安装用户的风险。
-    - 明文通信选择退出：防止应用意外使用明文通信。
-    - 证书固定：将应用的安全连接限制为特定的证书。
+- 配置networkSecurityConfig抓包说明
+    - 中间人代理之所有能够获取到加密密钥就是因为我们手机上安装并信任了其代理证书，这类证书安装后都会被归结到用户证书一类，而不是系统证书。
+    - 那我们可以选择只信任系统内置的系统证书，而屏蔽掉用户证书（Android7.0以后就默认是只信任系统证书了），就可以防止数据被解密了。
+- 实现App防抓包安全配置方式有两种：
+    - 一种是Android官方提供的网络安全配置；另一种也可以通过设置网络框架实现（以okhttp为例）。
+    - 第一种：具体可以看清单配置文件，相当于base-config标签下去掉 <certificates src="user" /> 这组标签。
+    - 第二种：需要给okhttpClient配置 X509TrustManager 来监听校验服务端证书有效性。遍历设备上信任的证书，通过证书别名将用户证书（别名中含有user字段）过滤掉，只将系统证书添加到验证列表中。
+- 该方案优点和缺点分析说明
+    - 优点：network_security_config配置简单，对整个app网络生效，无需修改代码；代码实现对通过该网络框架请求的生效，能兼容7.0以前系统。
+    - 缺陷：network_security_config配置方式，7.0以前的系统配置不生效，依然可以通过代理工具进行抓包。okhttp配置的方式只能对使用该网络框架进行数据传输的接口生效，并不能对整个app生效。
+    - 破解：将手机进行root，然后将代理证书放置到系统证书列表内，就可以绕过代码或配置检查了。
 
 
 
@@ -232,10 +247,14 @@
     - direct，http，socks。这样因为是直连，所以不走代理。所以charles等工具就抓不到包了，这样一定程度上保证了数据的安全，这种方式只是通过代理抓不到包。
 - 通常情况下上述的办法有用，但是无法防住使用 VPN 导流进行的抓包
     - 使用VPN抓包的原理是，先将手机请求导到VPN，再对VPN的网络进行Charles的代理，绕过了对App的代理。
+- 该方案优点和缺点分析说明
+    - 优点：实现简单方便，无系统版本兼容问题。
+    - 缺陷：该方案比较粗暴，将一切代理都切断了，对于有合理诉求需要使用网络代理的场景无法满足。
+    - 破解：使用ProxyDroid全局代理工具通过iptables对请求进行强制转发，可以有效绕过代理检测。
 
 
 
-#### 4.3 证书校验
+#### 4.3 证书校验(单向认证)
 - 下载服务器端公钥证书
     - 为了防止上面方案可能导致的“中间人攻击”，可以下载服务器端公钥证书，然后将公钥证书编译到Android应用中一般在assets文件夹保存，由应用在交互过程中去验证证书的合法性。
 - 如何设置证书校验
@@ -243,7 +262,11 @@
 - 如何设置域名合法性校验
     - 通过OkHttp的API方法 hostnameVerifier(hostnameVerifier) 设置域名合法性校验。
 - 证书校验的原理分析
-    - 待完善
+    - 按CA证书去验证的，若不是CA可信任的证书，则无法通过验证。
+- 该方案优点和缺点分析说明
+    - 优点：安全性比较高，单向认证校验证书在代码中是方便的，安全性相对较高。
+    - 缺陷：CA证书存在过期的问题，证书升级。
+    - 破解：证书锁定破解比较复杂，比如老牌的JustTrustMe插件，通过hook各网络框架的证书校验方法，替换原有逻辑，使校验失效。
 
 
 
@@ -254,20 +277,88 @@
     - 双向认证需要 Server 支持，Client 必须内置一套公钥证书 + 私钥。在 SSL/TLS 握手过程中，Server 端会向 Client 端请求证书，Client 端必须将内置的公钥证书发给 Server，Server 验证公钥证书的真实性。
     - 用于双向认证的公钥证书和私钥代表了 Client 端身份，所以其是隐秘的，一般都是用 .p12 或者 .bks 文件 + 密钥进行存放。
 - 代码层面如何做双向认证
-    - 待完善
+    - 双向校验就是自定义生成客户端证书，保存在服务端和客户端，当客户端发起请求时在服务端也校验客户端的证书合法性，如果不是可信任的客户端发送的请求，则拒绝响应。
+    - 服务端根据自身使用语言和网络框架配置相应证书校验机制即可。
+- 该方案优点和缺点分析说明
+    - 优点：安全性非常高，使用三方工具不易破解。
+    - 缺陷：服务端需要存储客户端证书，一般服务端会对应多个客户端，就需要分别存储和校验客户端证书，增加校验成本，降低响应速度。该方案比较适合对安全等级要求比较高的业务（如金融类业务）。
+    - 破解：由于在服务端也做校验，在服务端安全的情况下很难被攻破。
 
 
 
 #### 4.5 防止挂载抓包
+- Xposed是一个牛逼的黑科技
+    - Xposed + JustTrustMe 可以破解绕过校验CA证书。那么这样CA证书的校验就形同虚设了，对App的危险性也很大。
+- App多开运行在多个环境上
+    - 多开App的原理类似，都是以新进程运行被多开的App，并hook各类系统函数，使被多开的App认为自己是一个正常的App在运行。
+    - 一种是从多开App中直接加载被多开的App，如平行空间、VirtualApp等，另一种是让用户新安装一个App，但这个App本质上就是一个壳，用来加载被多开的App。
+- VirtualApp是一个牛逼的黑科技
+    - 它破坏了Android 系统本身的隔离措施，可以进行免root hook和其他黑科技操作，你可以用这个做很多在原来APP里做不到事情，于此同时Virtual App的安全威胁也不言而喻。
 - 如何判断是否具有Xposed环境
-    - 待完善
+    - 第一种方式：获取当前设备所有运行的APP，根据安装包名对应用进行检测判断是否有Xposed环境。
+    - 第二种方式：通过自造异常来检测堆栈信息，判断异常堆栈中是否包含Xposed等字符串。
+    - 第三种方式：通过ClassLoader检查是否已经加载了XposedBridge类和XposedHelpers类来检测。
+    - 第四种方式：获取DEX加载列表，判断其中是否包含XposedBridge.jar等字符串。
+    - 第五种方式：检测Xposed相关文件，通过读取/proc/self/maps文件，查找Xposed相关jar或者so文件来检测。
 - 如何判断是否是双开环境
-    - 待完善
-- 如何判断被VA宿主所挂载
-    - 待完善
+    - 第一种方式：通过检测app私有目录，多开后的应用路径会包含多开软件的包名。还有一种思路遍历应用列表如果出现同样的包名，则被认为双开了。
+    - 第二种方式：如果同一uid下有两个进程对应的包名，在"/data/data"下有两个私有目录，则该应用被多开了。
+- 判断了具有xposed或者多开环境怎么处理App
+    - 目前使用VirtualApp挂载，或者Xposed黑科技去hook，前期可以先用埋点统计。测试学而思App发现挂载在VA上是推出App。
+
 
 
 #### 4.5 数据加解密
+- 针对数据加解密入口
+    - 目前在网络请求类里添加拦截器，然后在拦截器中处理request请求和response响应数据的加密和解密操作。
+- 主要是加密什么数据
+    - 在request请求数据阶段，如果是get请求加密url数据，如果是post请求则加密url数据和requestBody数据。
+    - 在response响应数据阶段，
+- 如何进行加密：发起请求(加密)
+    - 第一步：获取请求的数据。主要是获取请求url和requestBody，这一块需要对数据一块处理。
+    - 第二步：对请求数据进行加密。采用RC4加密数据
+    - 第三步：根据不同的请求方式构造新的request。使用 key 和 result 生成新的 RequestBody 发起网络请求
+- 如何进行解密：接收返回(解密)
+    - 第一步：常规解析得到 result ，然后使用RC4工具，传入key去解密数据得到解密后的字符串
+    - 第二步：将解密的字符串组装成ResponseBody数据传入到body对象中
+    - 第三步：利用response对象去构造新的response，然后最后返回给App
+
+
+#### 4.7 证书锁定
+- 证书锁定是Google官方比较推荐的一种校验方式
+    - 原理是在客户端中预先设置好证书信息，握手时与服务端返回的证书进行比较，以确保证书的真实性和有效性。
+- 如何实现证书锁定
+    - 有两种实现方式：一种通过network_security_config.xml配置，另一种通过代码设置；
+    ``` java
+    //第一种方式：配置文件
+    <network-security-config>
+        <domain-config>
+            <domain includeSubdomains="true">api.zuoyebang.cn</domain>
+            <pin-set expiration="2025-01-01">
+                <pin digest="SHA-256">38JpactkIAq2Y49orFOOQKurWxmmSFZhBCoQYcRhK90=</pin>
+                <!-- 备用证书信息，一般为域名证书的二级证书 -->
+                <pin digest="SHA-256">9k1a0LRMXouZHRC8Ei+4PyuldPDcf3UKgO/04cDM90K=</pin>
+            </pin-set>
+        </domain-config>
+    </network-security-config>
+    
+    //第二种方式：代码设置
+    fun sslPinning(): OkHttpClient {
+        val builder = OkHttpClient.Builder()
+        val pinners = CertificatePinner.Builder()
+            .add("api.zuoyebang.cn", "sha256//89KpactkIAq2Y49orFOOQKurWxmmSFZhBCoQYcRh00L=")
+            .add("api.zuoyebang.com", "sha256//a8za0LRMXouZHRC8Ei+4PyuldPDcf3UKgO/04cDM1o=09")
+            .build()
+        builder.apply {
+            certificatePinner(pinners)
+        }
+        return builder.build()
+    }
+    ```
+- 该方案优点和缺点分析说明
+    - 优点：安全性高，配置方式也比较简单，并能实现动态更新配置。
+    - 缺陷：网络安全配置无法实现证书证书的动态更新，另外该配置也受Android系统影响，对7.0以前的系统不支持。代码配置相对灵活些。
+    - 破解：证书锁定破解比较复杂，比如老牌的JustTrustMe插件，通过hook各网络框架的证书校验方法，替换原有逻辑，使校验失效
 
 
 
@@ -279,12 +370,19 @@
 
 
 #### 5.3 稳定性设计
+- 对于请求和响应的数据加解密要注意
+    - 在网络上交换数据(网络请求数据)时，可能会遇到不可见字符，不同的设备对字符的处理方式有一些不同。
+    - Base64对数据内容进行编码来适合传输。准确说是把一些二进制数转成普通字符用于网络传输。统统变成可见字符，这样出错的可能性就大降低了。
 
 
 #### 5.4 降级设计
 
 
+
 #### 5.5 异常设计说明
+- base64加密和解密导致错误问题
+    - Android 有自带的Base64实现，flag要选Base64.NO_WRAP，不然末尾会有换行影响服务端解码。导致解码失败。
+
 
 
 
