feat：添加sign加密处理逻辑

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -26,6 +26,8 @@
     - 4.5 防止挂载抓包
     - 4.6 数据加解密
     - 4.7 证书锁定
+    - 4.8 Sign签名
+    - 4.9 其他的方式
 - 05.架构设计说明
     - 5.1 整体架构设计
     - 5.2 关键流程图
@@ -263,6 +265,8 @@
     - 通过OkHttp的API方法 hostnameVerifier(hostnameVerifier) 设置域名合法性校验。
 - 证书校验的原理分析
     - 按CA证书去验证的，若不是CA可信任的证书，则无法通过验证。
+- 证书校验该如何校验是否是信任的
+    - 待完善
 - 该方案优点和缺点分析说明
     - 优点：安全性比较高，单向认证校验证书在代码中是方便的，安全性相对较高。
     - 缺陷：CA证书存在过期的问题，证书升级。
@@ -359,6 +363,32 @@
     - 优点：安全性高，配置方式也比较简单，并能实现动态更新配置。
     - 缺陷：网络安全配置无法实现证书证书的动态更新，另外该配置也受Android系统影响，对7.0以前的系统不支持。代码配置相对灵活些。
     - 破解：证书锁定破解比较复杂，比如老牌的JustTrustMe插件，通过hook各网络框架的证书校验方法，替换原有逻辑，使校验失效
+
+
+#### 4.8 Sign签名
+- 先说一下背景和问题
+    - http://api.test.com/getbanner?key1=value1&key2=value2&key3=value3
+    - 这种方式简单粗暴，通过调用getbanner方法即可获取轮播图列表信息，但是这样的方式会存在很严重的安全性问题，没有进行任何的验证，大家都可以通过这个方法获取到数据，导致产品信息泄露。
+- 在写开放的API接口时是如何保证数据的安全性的？
+    - 请求来源(身份)是否合法？请求参数被篡改？请求的唯一性(不可复制)？
+- 问题的解决方案设想
+    - 解决方案：为了保证数据在通信时的安全性，我们可以采用参数签名的方式来进行相关验证。
+- 最终决定的解决方案
+    - 调用接口之前需要验证签名和有效时间，要生成一个sign签名。先拼接-后转码-再加密-再发请求！
+- sign签名校验实践
+    - 需要对请求参数进行签名验证，签名方式如下：key1=value1&key2=value2&key3=value3&secret=yc 。对这个字符串进行md5一下。
+    - 然后被sign后的接口就变成了：http://api.test.com/getbanner?key1=value1&key2=value2&key3=value3&sign=xxx
+    - 为什么在获取sign的时候建议使用secret参数？secret仅作加密使用，添加在参数中主要是md5，为了保证数据安全请不要在请求参数中使用。
+- 服务端对sign校验
+    - 这样请求的时候就需要合法正确签名sign才可以获取数据。这样就解决了身份验证和防止参数篡改问题，如果请求参数被人拿走，没事，他们永远也拿不到secret，因为secret是不传递的。再也无法伪造合法的请求。
+- 如何保证请求的唯一性
+    - http://api.test.com/getbanner?key1=value1&key2=value2&key3=value3&sign=xxx&stamp=201803261407
+    - 通过stamp时间戳用来验证请求是否过期。这样就算被人拿走完整的请求链接也是无效的。
+- Sign签名安全性分析：
+    - 通过上面的案例，安全的关键在于参与签名的secret，整个过程中secret是不参与通信的，所以只要保证secret不泄露，请求就不会被伪造。
+
+
+#### 4.9 其他的方式
 
 
 
