feat：添加sign加密处理逻辑

--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -86,6 +86,7 @@
 - 要清楚HTTPS抓包的原理，首先需要先说清楚 HTTPS 实现数据安全传输的工作原理，主要分为三要素和三阶段。
 - Http传输数据目前存在的问题
     - 1.通信使用明文，内容可能被窃听；2.不验证通信方的身份，因此可能遭遇伪装；3.无法证明报文的完整性，所以有可能遭到篡改。
+    - ![image](https://img-blog.csdnimg.cn/e83ebd1f1ca94f87b3148fb15dc8a5f7.png)
 - Https三要素分别是：
     - 1.加密：通过对称加密算法实现。
     - 2.认证：通过数字签名实现。（因为私钥只有 “合法的发送方” 持有，其他人伪造的数字签名无法通过验证）
@@ -94,7 +95,8 @@
     - 1.CA 证书校验：CA 证书校验发生在 TLS 的前两次握手，客户端和服务端通过报文获得服务端 CA 证书，客户端验证 CA 证书合法性，从而确认 CA 证书中的公钥合法性（大多数场景不会做双向认证，即服务端不会认证客户端合法性，这里先不考虑）。
     - 2.密钥协商：密钥协商发生在 TLS 的后两次握手，客户端和服务端分别基于公钥和私钥进行非对称加密通信，协商获得 Master Secret 对称加密私钥（不同算法的协商过程细节略有不同）。
     - 3.数据传输：数据传输发生在 TLS 握手之后，客户端和服务端基于协商的对称密钥进行对称加密通信。
-
+- Https流程图如下
+    - ![image](https://img-blog.csdnimg.cn/d714c2bb30a444b7b1422038b7eb7f25.png)
 
 
 #### 2.2 抓包核心原理
@@ -265,8 +267,8 @@
     - 通过OkHttp的API方法 hostnameVerifier(hostnameVerifier) 设置域名合法性校验。
 - 证书校验的原理分析
     - 按CA证书去验证的，若不是CA可信任的证书，则无法通过验证。
-- 证书校验该如何校验是否是信任的
-    - 待完善
+- 单向认证流程图
+    - ![image](https://img-blog.csdnimg.cn/888b3c81230d47a8bf073fbbff97d046.png)
 - 该方案优点和缺点分析说明
     - 优点：安全性比较高，单向认证校验证书在代码中是方便的，安全性相对较高。
     - 缺陷：CA证书存在过期的问题，证书升级。
@@ -283,6 +285,8 @@
 - 代码层面如何做双向认证
     - 双向校验就是自定义生成客户端证书，保存在服务端和客户端，当客户端发起请求时在服务端也校验客户端的证书合法性，如果不是可信任的客户端发送的请求，则拒绝响应。
     - 服务端根据自身使用语言和网络框架配置相应证书校验机制即可。
+- 双向认证流程图
+    - ![image](https://img-blog.csdnimg.cn/7e52929766224f86a23dee5c83fa24e6.png)
 - 该方案优点和缺点分析说明
     - 优点：安全性非常高，使用三方工具不易破解。
     - 缺陷：服务端需要存储客户端证书，一般服务端会对应多个客户端，就需要分别存储和校验客户端证书，增加校验成本，降低响应速度。该方案比较适合对安全等级要求比较高的业务（如金融类业务）。
@@ -388,12 +392,11 @@
     - 通过上面的案例，安全的关键在于参与签名的secret，整个过程中secret是不参与通信的，所以只要保证secret不泄露，请求就不会被伪造。
 
 
-#### 4.9 其他的方式
-
-
 
 ### 05.架构设计说明
 #### 5.1 整体架构设计
+- 如下所示
+    - ![image](https://img-blog.csdnimg.cn/5c881c7704474198a6174c9c013bbc07.png)
 
 
 #### 5.2 关键流程图
@@ -406,7 +409,15 @@
 
 
 #### 5.4 降级设计
-
+- 可以一键配置AB测试开关
+    ```
+    .setMonitorToggle(object : IMonitorToggle {
+        override fun isOpen(): Boolean {
+            //todo 是否降级，如果降级，则不使用该功能。留给AB测试开关
+           return false
+        }
+    })
+    ```
 
 
 #### 5.5 异常设计说明
@@ -414,29 +425,83 @@
     - Android 有自带的Base64实现，flag要选Base64.NO_WRAP，不然末尾会有换行影响服务端解码。导致解码失败。
 
 
+#### 5.6 Api文档
+- 关于初始化配置
+    ``` java
+    NotCaptureHelper.getInstance().config = CaptureConfig.builder()
+            //设置debug模式
+        .setDebug(true)
+            //设置是否禁用代理
+        .setProxy(false)
+            //设置是否进行数据加密和解密，
+        .setEncrypt(true)
+            //设置cer证书路径
+        .setCerPath("")
+            //设置是否进行CA证书校验
+        .setCaVerify(false)
+            //设置加密和解密key
+        .setEncryptKey(key)
+            //设置参数
+        .setReservedQueryParam(OkHttpBuilder.RESERVED_QUERY_PARAM_NAMES)
+        .setMonitorToggle(object : IMonitorToggle {
+            override fun isOpen(): Boolean {
+                //todo 是否降级，如果降级，则不使用该功能。留给AB测试开关
+               return false
+            }
+        })
+        .build()
+    ```
+- 设置okHttp配置
+    ``` java
+    NotCaptureHelper.getInstance().setOkHttp(app,okHttpBuilder)
+    ```
+- 如何设置自己的加解密方式
+    ``` java
+    NotCaptureHelper.getInstance().encryptDecryptListener = object : EncryptDecryptListener {
+        /**
+         * 外部实现自定义加密数据
+         */
+        override fun encryptData(key: String, data: String): String {
+            LoggerReporter.report("NotCaptureHelper", "encryptData data : $data")
+            val str = data.encryptWithRC4(key) ?: ""
+            LoggerReporter.report("NotCaptureHelper", "encryptData str : $str")
+            return str
+        }
+        /**
+         * 外部实现自定义解密数据
+         */
+        override fun decryptData(key: String, data: String): String {
+            LoggerReporter.report("NotCaptureHelper", "decryptData data : $data")
+            val str = data.decryptWithRC4(key) ?: ""
+            LoggerReporter.report("NotCaptureHelper", "decryptData str : $str")
+            return str
+        }
+    }
+    ```
 
 
-### 06.防抓包功能自测
-#### 6.1 网络请求测试
-- 正常请求，测试网络功能是否正常
-  
 
 
-#### 6.2 抓包测试
-- 配置fiddler等工具
-- 手机上设置代理
-- 手机上安装证书
-- 进行网络请求，会提示SSLHandshakeException即ssl握手失败的错误提示，即表示app端的单向认证成功
+#### 5.7 防抓包功能自测
+- 网络请求测试
+    - 正常请求，测试网络功能是否正常
+- 抓包测试
+    - 配置fiddler，charles等工具
+    - 手机上设置代理
+    - 手机上安装证书
+    - 单向认证测试：进行网络请求，会提示SSLHandshakeException即ssl握手失败的错误提示，即表示app端的单向认证成功。
+    - 数据加解密：进行网络请求，看一下请求参数和响应body数据是否加密，如果看不到实际json实体则表示加密成功。
 
 
-#### 6.3 黑科技挂载测试
+
+### 防抓包库：https://github.com/yangchong211/YCToolLib
+### 综合库：https://github.com/yangchong211/YCAppTool
+### 视频播放器：https://github.com/yangchong211/YCVideoPlayer
 
 
-#### 6.4 逆向破解测试
 
 
-### 参考博客
-- https://zhuanlan.zhihu.com/p/465441201
+
 
 
 
