--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -269,6 +269,8 @@
     - 按CA证书去验证的，若不是CA可信任的证书，则无法通过验证。
 - 单向认证流程图
     - ![image](https://img-blog.csdnimg.cn/888b3c81230d47a8bf073fbbff97d046.png)
+- 证书是如何校验
+    - 
 - 该方案优点和缺点分析说明
     - 优点：安全性比较高，单向认证校验证书在代码中是方便的，安全性相对较高。
     - 缺陷：CA证书存在过期的问题，证书升级。
