feat：完善链表笔记

--- a/Read/ReadLeetcode/02.链表实现Lru原理.md
+++ b/Read/ReadLeetcode/02.链表实现Lru原理.md
@@ -10,6 +10,7 @@
 
 
 
+
 ### 01.思考一个问题
 - 缓存的大小有限，当缓存被用满时，哪些数据应该被清理出去，哪些数据应该被保留？这就需要缓存淘汰策略来决定。
     - 常见的策略有三种：先进先出策略 FIFO（First In，First Out）、最少使用策略 LFU（Least Frequently Used）、最近最少使用策略 LRU（Least Recently Used）。
@@ -32,7 +33,8 @@
 
 
 ### 04.链表分类介绍
-- 链表结构五花八门，介绍三种最常见的链表结构，它们分别是：单链表、双向链表和循环链表。我们首先来看最简单、最常用的单链表。
+- 链表结构五花八门，介绍三种最常见的链表结构：
+    - 它们分别是：单链表、双向链表和循环链表。我们首先来看最简单、最常用的单链表。
 
 
 #### 4.1 单链表
@@ -86,7 +88,8 @@
         }
     }
     ```
-- 单链表和循环链表是不是都不难？接下来我们再来看一个稍微复杂的，在实际的软件开发中，也更加常用的链表结构：双向链表。
+- 单链表和循环链表是不是都不难？
+    - 接下来我们再来看一个稍微复杂的，在实际的软件开发中，也更加常用的链表结构：双向链表。
 - 单向链表只有一个方向，结点只有一个后继指针 next 指向后面的结点。而双向链表，顾名思义，它支持两个方向，每个结点不止有一个后继指针 next 指向后面的结点，还有一个前驱指针 prev 指向前面的结点。
     - ![image](https://upload-images.jianshu.io/upload_images/4432347-13b2de75ee6d5304.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 从画的图中可以看出来，双向链表需要额外的两个空间来存储后继结点和前驱结点的地址。所以，如果存储同样多的数据，双向链表要比单链表占用更多的内存空间。虽然两个指针比较浪费存储空间，但可以支持双向遍历，这样也带来了双向链表操作的灵活性。那相比单链表，双向链表适合解决哪种问题呢？
