--- a/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/04.ANR监控设计实践.md
@@ -527,5 +527,6 @@
     - https://juejin.cn/post/6942665216781975582
 - 今日头条 ANR 优化实践系列
     - https://mp.weixin.qq.com/s/_Z6GdGRVWq-_JXf5Fs6fsw
-
+- ANR监控
+    - https://juejin.cn/post/7181731795439157306
 
