--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -42,6 +42,7 @@
 
 
 
+
 ### 01.整体概述介绍
 #### 1.1 项目背景
 - 通讯安全是App安全检测过程中非常重要的一项
@@ -54,7 +55,7 @@
 
 #### 1.2 思考问题
 - 开发项目的时候，都需要抓包，很多情况下即使是Https也能正常抓包正常。那么问题来了：
-    - 抓包的原理是？任何Https的 app 都能抓的到吗？如果不能，哪些情况下可以抓取，哪些情况下抓取不到？
+    - **抓包的原理是？任何Https的 app 都能抓的到吗？如果不能，哪些情况下可以抓取，哪些情况下抓取不到**？
 - 什么叫做中间人攻击？
     - 使用HTTPS协议进行通信时，客户端需要对服务器身份进行完整性校验，以确认服务器是真实合法的目标服务器。
     - 如果没有校验，客户端可能与仿冒的服务器建立通信链接，即“中间人攻击”。
@@ -67,10 +68,10 @@
 - 沉淀为技术库复用
     - 目前只是针对App端有需要做防抓包措施，后期其他业务线可能也有这个需要。因此下沉为工具库，傻瓜式调用很有必要。
 - 该库终极设计目标如下所示
-    - 第一点：必须是低入侵性，对原有代码改动少，最简单的加入是一行代码设置即可。完全解耦合。
-    - 第二点：可以动态灵活配置，支持配置禁止代理，支持配置是否证书校验，支持配置域名合法性过滤，支持拦截器加解密数据。
-    - 第三点：可以检测App是否在双开，挂载，Xposed攻击环境
-    - 第四点：可以灵活设置加解密的key，可以灵活替换加解密方式，比如目前采用RC4，另一个项目想用DES，可以灵活更换。
+    - **第一点：必须是低入侵性，对原有代码改动少，最简单的加入是一行代码设置即可。完全解耦合**。
+    - **第二点：可以动态灵活配置，支持配置禁止代理，支持配置是否证书校验，支持配置域名合法性过滤，支持拦截器加解密数据**。
+    - **第三点：可以检测App是否在双开，挂载，Xposed攻击环境**。
+    - **第四点：可以灵活设置加解密的key，可以灵活替换加解密方式，比如目前采用RC4，另一个项目想用DES，可以灵活更换**。
 
 
 #### 1.4 收益分析
@@ -231,12 +232,16 @@
     - 那我们可以选择只信任系统内置的系统证书，而屏蔽掉用户证书（Android7.0以后就默认是只信任系统证书了），就可以防止数据被解密了。
 - 实现App防抓包安全配置方式有两种：
     - 一种是Android官方提供的网络安全配置；另一种也可以通过设置网络框架实现（以okhttp为例）。
-    - 第一种：具体可以看清单配置文件，相当于base-config标签下去掉 <certificates src="user" /> 这组标签。
+    - **第一种：具体可以看清单配置文件，相当于base-config标签下去掉 <certificates src="user" /> 这组标签。**
     - 第二种：需要给okhttpClient配置 X509TrustManager 来监听校验服务端证书有效性。遍历设备上信任的证书，通过证书别名将用户证书（别名中含有user字段）过滤掉，只将系统证书添加到验证列表中。
 - 该方案优点和缺点分析说明
     - 优点：network_security_config配置简单，对整个app网络生效，无需修改代码；代码实现对通过该网络框架请求的生效，能兼容7.0以前系统。
     - 缺陷：network_security_config配置方式，7.0以前的系统配置不生效，依然可以通过代理工具进行抓包。okhttp配置的方式只能对使用该网络框架进行数据传输的接口生效，并不能对整个app生效。
     - 破解：将手机进行root，然后将代理证书放置到系统证书列表内，就可以绕过代码或配置检查了。
+- 关于NetworkSecurityConfig配置文件
+    - NetworkSecurityConfig原理可以看：https://blog.csdn.net/cpcpcp123/article/details/108063189
+- 测试效果：可以防止抓包
+    - charles上抓包会失败，会报错与客户端SSL握手失败：处理证书时出现未知问题(certificate_unknown)
 
 
 
@@ -254,8 +259,9 @@
 - 该方案优点和缺点分析说明
     - 优点：实现简单方便，无系统版本兼容问题。
     - 缺陷：该方案比较粗暴，将一切代理都切断了，对于有合理诉求需要使用网络代理的场景无法满足。
-    - 破解：使用ProxyDroid全局代理工具通过iptables对请求进行强制转发，可以有效绕过代理检测。
-
+    - 破解：使用 [ProxyDroid](https://github.com/madeye/proxydroid) 全局代理工具通过iptables对请求进行强制转发，可以有效绕过代理检测。
+- 测试效果：可以防止抓包
+    - charles上抓包会失败，是直接看不到抓包的数据
 
 
 #### 4.3 证书校验(单向认证)
